--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<h1>Hola</h1>
+	<nav class="principal">
+
+ <h1>Julian Galotto-Diseñador Web</h1>
+  <ul>
+    
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Menu</a></li>
+    <li><a href="#">Contact</a></li>
+
+  </ul>
+
+</nav>
 </body>
 </html>
